<?xml version="1.0"?>
<package format="2">
  <name>speak_and_wait_recovery</name>
  <version>0.0.0</version>
  <description>The speak_and_wait_recovery package</description>

  <author email="sktometometo@gmail.com">sktometometo</author>
  <maintainer email="sktometometo@gmail.com">sktometometo</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>costmap_2d</depend>
  <depend>nav_core</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export>
      <nav_core plugin="${prefix}/speak_and_wait_plugin.xml" />
  </export>
</package>
